# P2PBoard

./: LICENSE  README.md  meson.build
Server/: .gitignore  SERVER_ANALYSIS.md  main.cpp  meson.build  server.cpp  server.h
client/ubuntu/: meson.build  meson_options.txt
client/ubuntu/src/: clipboard_manager.cpp  clipboard_manager.h  config.h  main.cpp  websocket_client.cpp  websocket_client.h
